--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,7 @@
 @tailwind utilities;
 
 @layer base {
-  
+  .navbar {
+    @apply text-slate-50 text-2xl w-screen flex justify-center bg-gray-500;
+  }
 }
